writ-compiler/tests/snapshots/lowering_tests__dlg_speaker_tag_sets_active.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Fn(
            AstFnDecl {
                attrs: [],
                vis: None,
                name: "intro",
                name_span: 4..9,
                generics: [],
                params: [],
                return_type: None,
                body: [
                    Let {
                        mutable: false,
                        name: "_narrator",
                        name_span: 15..23,
                        ty: None,
                        value: GenericCall {
                            callee: MemberAccess {
                                object: Ident {
                                    name: "Entity",
                                    span: 15..23,
                                },
                                field: "getOrCreate",
                                field_span: 15..23,
                                span: 15..23,
                            },
                            type_args: [
                                Named {
                                    name: "Narrator",
                                    span: 15..23,
                                },
                            ],
                            args: [],
                            span: 15..23,
                        },
                        span: 15..23,
                    },
                    Expr {
                        expr: Call {
                            callee: Ident {
                                name: "say",
                                span: 14..43,
                            },
                            args: [
                                AstArg {
                                    name: None,
                                    value: Ident {
                                        name: "_narrator",
                                        span: 15..23,
                                    },
                                    span: 14..43,
                                },
                                AstArg {
                                    name: None,
                                    value: StringLit {
                                        value: "Hello.\nHow are you?",
                                        span: 24..43,
                                    },
                                    span: 14..43,
                                },
                            ],
                            span: 14..43,
                        },
                        span: 14..43,
                    },
                ],
                span: 0..45,
            },
        ),
    ],
}
