writ-compiler/tests/snapshots/lowering_tests__entity_component_partial_override.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Entity(
            AstEntityDecl {
                attrs: [],
                vis: None,
                name: "Guard",
                name_span: 7..12,
                properties: [],
                component_slots: [
                    AstComponentSlot {
                        component: "Health",
                        component_span: 19..25,
                        overrides: [
                            (
                                "current",
                                28..35,
                                IntLit {
                                    value: 50,
                                    span: 37..39,
                                },
                            ),
                        ],
                        span: 15..41,
                    },
                ],
                hooks: [],
                inherent_impl: None,
                span: 0..43,
            },
        ),
    ],
}
