writ-compiler/tests/snapshots/lowering_tests__entity_component_slot_no_overrides.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Entity(
            AstEntityDecl {
                attrs: [],
                vis: None,
                name: "Guard",
                name_span: 7..12,
                properties: [],
                component_slots: [
                    AstComponentSlot {
                        component: "Speaker",
                        component_span: 19..26,
                        overrides: [],
                        span: 15..29,
                    },
                ],
                hooks: [],
                inherent_impl: None,
                span: 0..31,
            },
        ),
    ],
}
