writ-compiler/tests/snapshots/lowering_tests__entity_component_use_clause.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Entity(
            AstEntityDecl {
                attrs: [],
                vis: None,
                name: "Guard",
                name_span: 7..12,
                properties: [
                    AstStructField {
                        vis: None,
                        is_mutable: false,
                        name: "name",
                        name_span: 15..19,
                        ty: Named {
                            name: "string",
                            span: 21..27,
                        },
                        default: None,
                        span: 15..28,
                    },
                ],
                component_slots: [
                    AstComponentSlot {
                        component: "Health",
                        component_span: 33..39,
                        overrides: [
                            (
                                "current",
                                42..49,
                                IntLit {
                                    value: 80,
                                    span: 51..53,
                                },
                            ),
                            (
                                "max",
                                55..58,
                                IntLit {
                                    value: 80,
                                    span: 60..62,
                                },
                            ),
                        ],
                        span: 29..64,
                    },
                ],
                hooks: [],
                inherent_impl: None,
                span: 0..66,
            },
        ),
    ],
}
