writ-compiler/tests/snapshots/lowering_tests__entity_duplicate_property_error.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: "(ast, errors)"
---
(
    Ast {
        items: [
            Entity(
                AstEntityDecl {
                    attrs: [],
                    vis: None,
                    name: "Guard",
                    name_span: 7..12,
                    properties: [
                        AstStructField {
                            vis: None,
                            is_mutable: false,
                            name: "name",
                            name_span: 15..19,
                            ty: Named {
                                name: "string",
                                span: 21..27,
                            },
                            default: None,
                            span: 15..28,
                        },
                    ],
                    component_slots: [],
                    hooks: [],
                    inherent_impl: None,
                    span: 0..40,
                },
            ),
        ],
    },
    [
        DuplicateProperty {
            property: "name",
            entity: "Guard",
            span: 29..33,
        },
    ],
)
